fix(timeline): add padding to prevent overlap

--- a/frontend/assets/css/timeline.scss
+++ b/frontend/assets/css/timeline.scss
@@ -262,6 +262,7 @@ html {
         margin: 0 0 0;
         border-bottom: 0.4vw solid $taupe;
         align-self: flex-end;
+        padding-top:4vw;
         /*background:red;*/
         &:hover {
           border-bottom: 0.4vw solid darken($taupe, 20%);
